Reduce cyclomatic complexity in high-complexity methods
SpamFilter:
- Convert log() switch statement to switch expression
- Consolidate AddDelta/ChangeDelta handling in getChange()
- Convert Host inner class to record with compact constructor

DefaultUserManager:
- Replace SpamFilter lookup loop with stream-based approach

DefaultAuthorizationManager:
- Simplify resolvePrincipal() with stream-based principal search

DefaultAuthenticationManager:
- Use Map.of() and Set.of() for immutable empty collections

WorkflowBuilder:
- Use computeIfAbsent() for thread-safe builder caching
- Extract setFirstStep() helper to reduce code duplication

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>